fix: lowered z-index of logout modal conatiner

--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -519,7 +519,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1002;
+    z-index: 100001;
 }
 
 /* Modal Content */ 
